[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    { name = "Hassan Lakhal", email = "hlakhal-@student.1337.ma" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/hassanlakhal/ft_package" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
